--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Site de uma Conferência Web">
+    <meta name="description" content="Portofolio Pessoal">
     <meta name="author" content="Sérgio Carvalho">
 
     <title>Sérgio Carvalho - Portofolio</title>
