--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                         <img src="assets/rn-logo.png"></img>
                         <img src="assets/node-logo.png"></img>
                         <img src="assets/mysql-logo.png"></img>
+                        <img src="assets/mongodb-logo.png"></img>
                         <img src="assets/android-logo.png"></img>
-
                     </div>
                 </div>
             </div>
