--- a/index.html
+++ b/index.html
@@ -91,10 +91,9 @@
                         </h3>
                         <h3 class="info">Sempre fui apaixonado por futebol sendo neste momento jogador
                             semi-profissional no <strong>Berço SC</strong> ,
-                            algo que concilio com a minha carreira escolar e com a minha outra grande paixão que são os
-                            computadores,
-                            estes que desde miúdo me despertaram muita curiosidade e agora ainda mais
-                            com a descoberta da programação.
+                            algo que concilio com a minha carreira escolar e mais recentemente com o desenvolvimento
+                            de software como freelancer, estando de momento ligado a projetos frontend baseados
+                            em AngularJs e em apps Android nativas.
                         </h3>
                     </div>
                 </div>
