--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
                         <img src="assets/ts-logo.png"></img>
                         <img src="assets/java-logo.png"></img>
                         <img src="assets/c-logo.png"></img>
-
+                        <img src="assets/mysql-logo.png"></img>
+                        <img src="assets/mongodb-logo.png"></img>
                     </div>
                     <div class="tecno-line2">
                         <img src="assets/angular-logo2.png"></img>
                         <img src="assets/rn-logo.png"></img>
+                        <img src="assets/ionic-logo.png"></img>
                         <img src="assets/node-logo.png"></img>
-                        <img src="assets/mysql-logo.png"></img>
-                        <img src="assets/mongodb-logo.png"></img>
                         <img src="assets/android-logo.png"></img>
                     </div>
                 </div>
