--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="#page-top">Portofolio</a>
+            <a class="navbar-brand" href="#page-top">Portofolio Pessoal</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -53,9 +53,6 @@
                     <li class="nav-item">
                         <a id="aSponsors" class="nav-link js-scroll-trigger" href="#projects">PROJETOS</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#contact">CONTACTO</a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -66,14 +63,13 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Sérgio Carvalho</div>
-                <div class="intro-heading text-uppercase">Developer</div>
+                <div class="intro-heading text-uppercase">Software Developer</div>
                 <a id="btnRegister" class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#sobre">Sabe
                     mais sobre mim</a>
             </div>
         </div>
     </header>
 
-    <!-- ######################### SOBRE ########################## -->
     <section id="sobre">
         <div class="container">
             <div class="row">
@@ -84,7 +80,7 @@
                 <div class="col-lg-12 about">
                     <img class="user-photo" src="./assets/me.png" alt="My photo"></img>
                     <div class="info-wrap">
-                        <h3 class="info">Olá chamo-me Sérgio Carvalho, tenho 20 anos e sou natural de
+                        <h3 class="info">Olá chamo-me Sérgio Carvalho, tenho 21 anos e sou natural de
                             <strong>Guimarães</strong>. Atualmente estou a frequentar
                             o 3º ano de <strong>Mestrado Integrado em Telecomunicações e Informática</strong> na
                             Universidade do Minho.
@@ -93,7 +89,7 @@
                             semi-profissional no <strong>Berço SC</strong> ,
                             algo que concilio com a minha carreira escolar e mais recentemente com o desenvolvimento
                             de software como freelancer, estando de momento ligado a projetos frontend baseados
-                            em AngularJs e em apps Android nativas.
+                            em AngularJs e em apps híbridas ou nativas para Android.
                         </h3>
                     </div>
                 </div>
@@ -102,7 +98,6 @@
         </div>
     </section>
 
-    <!-- ######################### TECNOLOGIAS ####################  -->
     <section id="tecno">
         <div class="container">
             <div class="row justify-content-center">
@@ -130,7 +125,6 @@
         </div>
     </section>
 
-    <!-- ######################### Projetos ####################  -->
     <section id="projects">
         <div class="container">
             <div class="row">
@@ -146,60 +140,22 @@
         </div>
     </section>
 
-    <!-- ####################### CONTACTO ######################### -->
-    <section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading text-uppercase">Contacto</h2>
-                    <h3 class="section-subheading text-muted">Deixe a sua mensagem que mal possa entrarei em contacto
-                        consigo!</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <form id="contactForm" name="sentMessage">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input class="form-control" id="name" type="text" placeholder="o seu nome" required>
-                                </div>
-                                <div class="form-group">
-                                    <input class="form-control" id="email" type="email" placeholder="o seu email"
-                                        required>
-                                </div>
-                                <div class="form-group">
-                                    <input class="form-control" id="phone" type="tel"
-                                        placeholder="o seu nº de telemóvel">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <textarea class="form-control" id="message" placeholder="a sua mensagem"
-                                        required></textarea>
-                                </div>
-                            </div>
 
-                            <div class="col-lg-12 text-center">
-                                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase"
-                                    type="submit">Enviar mensagem</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Footer -->
     <footer class="">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <span class="copyright">Copyright &copy; Sérgio Carvalho 2020</span>
+                    <span class="copyright">Copyright &copy; Sérgio Carvalho 2021</span>
                 </div>
                 <div class="col-md-6">
                     <ul class="list-inline social-buttons">
+                        <li class="list-inline-item">
+                            <a target="_blank" rel="noopener noreferrer" href="mailto:sergiompc12@gmail.com">
+                                <i class="far fa-envelope"></i>
+                            </a>
+                        </li>
                         <li class="list-inline-item">
                             <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/sergiomiguel7">
                                 <i class="fab fa-twitter"></i>
