--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="description" content="Portofolio Pessoal">
     <meta name="author" content="Sérgio Carvalho">
 
-    <title>Sérgio Carvalho - Portofolio</title>
+    <title>Sérgio Carvalho - Software Developer</title>
 
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico?v=2" type="image/x-icon" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
