--- a/index.html
+++ b/index.html
@@ -86,10 +86,9 @@
                             Universidade do Minho.
                         </h3>
                         <h3 class="info">Sempre fui apaixonado por futebol sendo neste momento jogador
-                            semi-profissional no <strong>Berço SC</strong> ,
-                            algo que concilio com a minha carreira escolar e mais recentemente com o desenvolvimento
-                            de software como freelancer, estando de momento ligado a projetos frontend baseados
-                            em AngularJs e em apps híbridas ou nativas para Android.
+                            semi-profissional, algo que concilio com a minha carreira escolar e mais recentemente com o desenvolvimento
+                            de software como <strong>freelancer</strong>, estando de momento ligado a projetos frontend baseados
+                            em AngularJs e no desenvolvimento de apps híbridas, bem como apps nativas para Android.
                         </h3>
                     </div>
                 </div>
