--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
                             Universidade do Minho.
                         </h3>
                         <h3 class="info">Sempre fui apaixonado por futebol sendo neste momento jogador
-                            semi-profissional, algo que concilio com a minha carreira escolar e mais recentemente com o desenvolvimento
-                            de software como <strong>freelancer</strong>, estando de momento ligado a projetos frontend baseados
+                            semi-profissional, algo que concilio com a minha carreira escolar e mais recentemente com o
+                            desenvolvimento
+                            de software como <strong>freelancer</strong>, estando de momento ligado a projetos frontend
+                            baseados
                             em AngularJs e no desenvolvimento de apps híbridas, bem como apps nativas para Android.
                         </h3>
                     </div>
@@ -156,8 +158,9 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/sergiomiguel7">
-                                <i class="fab fa-twitter"></i>
+                            <a target="_blank" rel="noopener noreferrer"
+                                href="https://www.linkedin.com/in/s%C3%A9rgio-carvalho-b4173a198/">
+                                <i class="fab fa-linkedin-in"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
@@ -168,8 +171,8 @@
                         </li>
                         <li class="list-inline-item">
                             <a target="_blank" rel="noopener noreferrer"
-                                href="https://www.linkedin.com/in/s%C3%A9rgio-carvalho-b4173a198/">
-                                <i class="fab fa-linkedin-in"></i>
+                                href="https://www.instagram.com/sergiocarvalho_1/">
+                                <i class="fab fa-instagram"></i>
                             </a>
                         </li>
                     </ul>
@@ -200,11 +203,11 @@
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.26.9/sweetalert2.all.min.js"></script>
-    
+
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
 
-    <script type="text/javascript">(function () {emailjs.init("user_nb0ncuxocqJnSR3a6iNIu");})();</script>
-    
+    <script type="text/javascript">(function () { emailjs.init("user_nb0ncuxocqJnSR3a6iNIu"); })();</script>
+
     <script src="js/animation.js"></script>
 
     <script src="js/utils.js"></script>
