--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="col-lg-12 about">
                     <img class="user-photo" src="./assets/me.png" alt="My photo"></img>
                     <div class="info-wrap">
-                        <h3 class="info">Olá chamo-me Sérgio Carvalho, tenho 21 anos e sou natural de
+                        <h3 class="info">Olá, chamo-me Sérgio Carvalho. Tenho 21 anos e sou natural de
                             <strong>Guimarães</strong>. Atualmente estou a frequentar
                             o 3º ano de <strong>Mestrado Integrado em Telecomunicações e Informática</strong> na
                             Universidade do Minho.
