--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                         <img src="assets/ionic-logo.png"></img>
                         <img src="assets/node-logo.png"></img>
                         <img src="assets/android-logo.png"></img>
+                        <img src="assets/nestjs_png.png"></img>
                     </div>
                 </div>
             </div>
@@ -132,7 +133,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading text-uppercase">Projetos</h2>
                 </div>
-                <div class="table-responsive-sm">
+                <div class="table-responsive-sm table-striped">
                     <table id="tableProjects" class="table table-hover">
 
                     </table>
@@ -147,7 +148,7 @@
     <footer class="">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div style="text-align: left;" class="col-md-6">
                     <span class="copyright">Copyright &copy; Sérgio Carvalho 2021</span>
                 </div>
                 <div class="col-md-6">
